--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CallingApp</string>
+    <string name="app_name">Calling App</string>
     <string name="phone">الهاتف</string>
     <string name="search">بحث</string>
-    <string name="here_paied">نسخ #</string>
+    <string name="here_paied">اتصال</string>
     <string name="two">الاشعار برسالة</string>
     <string name="three">نسخ بلا مقدمة</string>
     <string name="copy">نسخ</string>
